--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.7.2",
     "react": "^16.5.2",
+    "react-chartjs": "^1.2.0",
+    "react-d3-components": "^0.9.1",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-google-charts": "^3.0.8",
+    "react-scripts": "2.0.4",
+    "react-vis": "^1.11.2",
+    "webpack-bundle-analyzer": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
